--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -6,17 +6,28 @@ div.bar {
   margin-right: 3px; }
 
 .circle {
-  fill: green; }
+  fill: #336666; }
 
 .axis path,
 .axis line {
   fill: none;
-  stroke: gray;
+  stroke: #666666;
   shape-rendering: crispEdges;
-  width: 2px; }
+  width: 1px; }
 
 .axis text {
   font-family: sans-serif;
-  font-size: 11px; }
+  font-size: 11px;
+  color: #666666; }
+
+.label_text {
+  color: #666666;
+  font-family: sans-serif;
+  font-size: 15px; }
+
+.label_rect {
+  color: white;
+  background-color: white;
+  fill: #cccccc; }
 
 /*# sourceMappingURL=index.css.map */
