--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -28,6 +28,6 @@ div.bar {
 .label_rect {
   color: white;
   background-color: white;
-  fill: #cccccc; }
+  fill: #e9e9e9; }
 
 /*# sourceMappingURL=index.css.map */
