--- a/stylesheets/index.scss
+++ b/stylesheets/index.scss
@@ -29,11 +29,11 @@ div.bar {
 	color: #666666;
 	font-family: sans-serif;
     font-size: 15px;
- 
+
 }
 
 .label_rect{
 	color: white;
 	background-color: white;
-	fill: #cccccc;
+	fill: #e9e9e9;
 }
