--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -5,8 +5,8 @@ div.bar {
   background-color: teal;
   margin-right: 3px; }
 
-.circle {
-  fill: #336666; }
+.point {
+  fill: #6b9c88; }
 
 .axis path,
 .axis line {
@@ -26,8 +26,10 @@ div.bar {
   font-size: 15px; }
 
 .label_rect {
-  color: white;
   background-color: white;
-  fill: #e9e9e9; }
+  fill: white; }
+
+body {
+  background-color: #E6E6E6; }
 
 /*# sourceMappingURL=index.css.map */
