--- a/stylesheets/index.scss
+++ b/stylesheets/index.scss
@@ -6,8 +6,8 @@ div.bar {
 	margin-right: 3px;
 }
 
-.circle{
-	fill: #336666;
+.point {
+	fill: #6b9c88;
 }
 
 
@@ -33,7 +33,10 @@ div.bar {
 }
 
 .label_rect{
-	color: white;
 	background-color: white;
-	fill: #e9e9e9;
+	fill: white;
+}
+
+body{
+	background-color: #E6E6E6;
 }
