--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -29,7 +29,13 @@ div.bar {
   background-color: white;
   fill: white; }
 
-body {
-  background-color: #E6E6E6; }
+.box {
+  background-color: #E6E6E6;
+  padding: 20px;
+  width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30px;
+  border-radius: 5px; }
 
 /*# sourceMappingURL=index.css.map */
