--- a/stylesheets/index.scss
+++ b/stylesheets/index.scss
@@ -37,6 +37,11 @@ div.bar {
 	fill: white;
 }
 
-body{
+.box{
 	background-color: #E6E6E6;
-}
+	padding: 20px;
+	width: 600px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 30px;
+	border-radius: 5px }
