--- a/stylesheets/index.scss
+++ b/stylesheets/index.scss
@@ -6,6 +6,12 @@ div.bar {
 	margin-right: 3px;
 }
 
+path { 
+    stroke: #6b9c88;
+    stroke-width: 1;
+    fill: none;
+}
+
 .point {
 	fill: #6b9c88;
 }
